[package]
name = "actix"
version = "0.1.0"
authors = ["Nick Blantz <nicholasblantz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
bson = "0.13"
chrono = "0.4"
mongodb = "0.3"
r2d2 = "0.8"
r2d2-mongodb = "0.2"
serde = "1.0"
# lazy_static = "1.4"
